# matehub

./: .gitignore  CHANGELOG.md  LICENSE  README.md  kakao-login-flow.md
backend/: .env.example  alembic.ini  celery_app.py  clear_all_data.py  main.py  pyproject.toml  setup_db.py  start.sh
backend/app/: config.py  main.py
backend/app/api/: auth.py  jwt_auth.py
backend/app/auth/: callback.html  kakao.py  routes.py
backend/app/character/: router.py  schemas.py  services.py
backend/app/chat/: chat_service.py  router.py  schemas.py
backend/app/database/: chat_service.py  connection.py  models.py  schemas.py  services.py
backend/app/llm/: ai_response.py  base_client.py  claude_client.py  client_factory.py  gemini_client.py  ollama_client.py  router.py  tasks.py
backend/app/llm/clients/: __init__.py  claude_client.py  gemini_client.py  ollama_client.py
backend/app/login/: callback.html  routes.py
backend/app/profile/: router.py  schemas.py  services.py  tasks.py
backend/app/signin/: __init__.py  router.py  tasks.py
backend/app/story/: router.py  schemas.py
backend/migrations/: env.py
backend/ops/: .env.example  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  init-db.sql  nginx.conf  redis.conf
frontend/: api-service-auth.js  api-service.js  auth.html  auth.js  auto-auth.js  callback-bridge-helper.js  callback-bridge.html  chat-client.js  chat.js  create-story.html  index.html  kakao-auth.js  kakao-callback.html  script.js  start.sh  styles.css
